--- a/po/pl.po
+++ b/po/pl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-02 08:31-0500\n"
-"PO-Revision-Date: 2014-01-24 08:52+0000\n"
+"PO-Revision-Date: 2014-03-03 07:16+0000\n"
 "Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-03 05:47+0000\n"
+"X-Launchpad-Export-Date: 2014-03-04 08:23+0000\n"
 "X-Generator: Launchpad (build 16948)\n"
 "Language: \n"
 
@@ -126,7 +126,7 @@ msgstr "Usuń"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Search terms…"
-msgstr ""
+msgstr "Szukaj słowa..."
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Move Up"
@@ -142,7 +142,7 @@ msgstr "<big><b>Nazwa programu</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Application Name"
-msgstr ""
+msgstr "Nazwa programu"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application Comment"
@@ -175,7 +175,7 @@ msgstr "Polecenie"
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "\"Path\": The working directory to run the program in."
-msgstr ""
+msgstr "\"Ścieżka\": Katalog roboczy, w którym uruchamiany jest program."
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Working Directory"
@@ -183,7 +183,7 @@ msgstr "Katalog roboczy"
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Browse…"
-msgstr ""
+msgstr "Przeglądaj…"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Application Details</b>"
@@ -264,7 +264,7 @@ msgstr "Nazwa"
 
 #: ../data/ui/MenulibreWindow.ui.h:71
 msgid "Action Name"
-msgstr ""
+msgstr "Nazwa czynności"
 
 #: ../data/ui/MenulibreWindow.ui.h:72
 msgid "Actions"
@@ -276,6 +276,8 @@ msgid ""
 "\"GenericName\": Generic name of the application, for example \"Web "
 "Browser\"."
 msgstr ""
+"\"Nazwa ogólna\": Nazwa ogólna programu, na przykład \"Przeglądarka "
+"internetowa\"."
 
 #: ../data/ui/MenulibreWindow.ui.h:75
 msgid "Generic Name"
@@ -295,7 +297,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:82
 msgid "Not Shown In"
-msgstr ""
+msgstr "Nie pokazywany w"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:84
@@ -310,7 +312,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:89
 msgid "Only Shown In"
-msgstr ""
+msgstr "Pokazuj tylko w"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:91
@@ -412,7 +414,7 @@ msgstr "<small><i>Nazwa pliku</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:128
 msgid "Select an icon…"
-msgstr ""
+msgstr "Wybierz ikonę..."
 
 #: ../data/ui/MenulibreWindow.ui.h:129
 msgid "<b>Select an icon</b>"
@@ -420,7 +422,7 @@ msgstr "<b>Wybierz ikonę</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:130
 msgid "Search"
-msgstr ""
+msgstr "Szukaj"
 
 #: ../data/ui/MenulibreWindow.ui.h:131
 msgid "column"
@@ -627,7 +629,7 @@ msgstr "Wyniki wyszukiwania"
 
 #: ../menulibre/MenulibreApplication.py:799
 msgid "ThisEntry"
-msgstr ""
+msgstr "Ten wpis"
 
 #: ../menulibre/MenulibreApplication.py:817
 msgid "Select a category"
@@ -639,7 +641,7 @@ msgstr "Nazwa kategorii"
 
 #: ../menulibre/MenulibreApplication.py:904
 msgid "This Entry"
-msgstr ""
+msgstr "Ten wpis"
 
 #: ../menulibre/MenulibreApplication.py:959
 msgid "New Shortcut"
@@ -675,7 +677,7 @@ msgstr "OK"
 
 #: ../menulibre/MenulibreApplication.py:1146
 msgid "Images"
-msgstr ""
+msgstr "Obrazy"
 
 #: ../menulibre/MenulibreApplication.py:1255
 msgid "Select a working directory..."
@@ -688,13 +690,15 @@ msgstr "Wybierz plik wykonalny..."
 #. Display a dialog saying this item is missing
 #: ../menulibre/MenulibreApplication.py:1408
 msgid "No Longer Installed"
-msgstr ""
+msgstr "Nie zainstalowany"
 
 #: ../menulibre/MenulibreApplication.py:1409
 msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"Ten wyzwalacz został usunięty z systemu.\n"
+"Wybierz następny z dostępnych elementów."
 
 #: ../menulibre/MenulibreApplication.py:1435
 msgid "Do you want to save the changes before leaving this launcher?"
@@ -710,7 +714,7 @@ msgstr "Nie masz uprawnień, aby móc usunąć en plik."
 
 #: ../menulibre/MenulibreApplication.py:2031
 msgid "Cannot add subdirectories to preinstalled system paths."
-msgstr ""
+msgstr "Nie można dodać podkatalogów do preinstalowanych ścieżek systemu."
 
 #: ../menulibre/MenulibreApplication.py:2045
 msgid "New Launcher"
