--- a/po/es.po
+++ b/po/es.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-09 22:10-0400\n"
-"PO-Revision-Date: 2014-02-26 20:34+0000\n"
-"Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
+"PO-Revision-Date: 2014-02-26 03:09+0000\n"
+"Last-Translator: Ra <hal90001@live.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-10 06:35+0000\n"
+"X-Launchpad-Export-Date: 2014-03-11 06:06+0000\n"
 "X-Generator: Launchpad (build 16948)\n"
 "Language: es\n"
 
